Add .env files for production and development modes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.rtl.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Flow Wing</title>
   </head>
 
   <body>
