Bug fix logout when refresh the page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       rel="stylesheet"
     />
     <!-- ALERTIFY JS -->
-
+<!-- include the style -->
+<link rel="stylesheet" href="{PATH}/alertify.min.css" />
+<!-- include a theme -->
+<link rel="stylesheet" href="{PATH}/themes/default.min.css" />
     <!-- CSS -->
     <link
       rel="stylesheet"
@@ -66,5 +69,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- include the script -->
+<script src="{PATH}/alertify.min.js"></script>
   </body>
 </html>
